# tomate

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: rust-clippy.yml  rust.yml
man/: tomate.1.md
src/: config.rs  duration.rs  history.rs  hooks.rs  lib.rs  long_break.rs  main.rs  pomodoro.rs  short_break.rs  time.rs
src/time/: datetime.rs  datetimeopt.rs  duration.rs  mod.rs
