[package]
name = "tomate"
version = "0.2.0"
edition = "2021"
authors = ["Rosa Richter"]
license = "MIT"
description = "A Pomodoro CLI tool"
homepage = "https://github.com/Cantido/tomate"
repository = "https://github.com/Cantido/tomate"
keywords = ["cli", "pomodoro"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
env_logger = "0.11.3"
log = "0.4.22"
prettytable-rs = "0.10.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
