[package]
name = "tomate"
version = "0.3.0"
edition = "2021"
authors = ["Rosa Richter"]
license = "AGPL-3.0-or-later"
description = "A Pomodoro CLI tool"
homepage = "https://github.com/Cantido/tomate"
repository = "https://github.com/Cantido/tomate"
keywords = ["cli", "pomodoro"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
colored = "3.0.0"
directories = "6.0.0"
env_logger = "0.11.6"
human-panic = "2.0.2"
log = "0.4.25"
prettytable-rs = "0.10.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
